tests/test64.rael.exp
Error [1:1]: Unrecognized token
| rael
| ^
